--- a/src/renderer/pages/PlayWithFriend/playwithfriend.css
+++ b/src/renderer/pages/PlayWithFriend/playwithfriend.css
@@ -4,23 +4,39 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  row-gap: 40px;
+  box-sizing: border-box;
 }
+
 .room-code-title{
   font-size: 40px;
   align-self: flex-start;
 }
+
+.play-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  margin: 20px;
+  box-sizing: border-box;
+}
+
 .play-option-container{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin: 20px;
+  padding: 100px;
+  box-sizing: border-box;
 }
 .join-game{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  row-gap: 35px;
+  row-gap: 45px;
 }
 .create-game{
   display: flex;
@@ -31,6 +47,8 @@
 .play-description-container{
   display: flex;
   flex-direction: row;
+  padding: 0px 100px;
+  box-sizing: border-box;
 }
 .play-description{
   width: 50vw;
@@ -40,11 +58,12 @@
   align-items: center;
 }
 .play-description p{
+  font-size: 1.5em;
   color: #3C0B53;
   opacity: 0.3;
 }
 .vertical-line{
   border-left: 0.8px solid #FFB7FF;
-  height: 300px;
+  height: 400px;
   align-self: center;
 }
