--- a/src/renderer/pages/PlayWithFriend/playwithfriend.css
+++ b/src/renderer/pages/PlayWithFriend/playwithfriend.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-wrap: nowrap;
   row-gap: 40px;
   box-sizing: border-box;
 }
@@ -28,7 +29,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   margin: 20px;
-  padding: 100px;
+  height: 100%;
   box-sizing: border-box;
 }
 .join-game{
@@ -47,7 +48,6 @@
 .play-description-container{
   display: flex;
   flex-direction: row;
-  padding: 0px 100px;
   box-sizing: border-box;
 }
 .play-description{
