--- a/src/renderer/pages/Home/home.css
+++ b/src/renderer/pages/Home/home.css
@@ -1,22 +1,22 @@
-.home-container{
+.home-container {
   width: 100vw;
   height: 100vh;
-  background-color: #826AED;
+  background-color: #826aed;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   row-gap: 120px;
 }
-.game-title{
+.game-title {
   font-weight: 300;
   font-size: 13vw;
   position: relative;
-  -webkit-text-fill-color:#000000;
-  -webkit-text-stroke: 7px #C879FF;
+  -webkit-text-fill-color: #000000;
+  -webkit-text-stroke: 7px #c879ff;
   letter-spacing: 4px;
 }
-.game-title-box{
+.game-title-box {
   width: 72vw;
   height: 27vh;
   background-color: #ffffff;
@@ -26,9 +26,14 @@
   border-radius: 50px;
   border: 5px solid #000000;
 }
-.button-container{
+.button-container {
   display: flex;
   flex-direction: row;
   width: 70vw;
   justify-content: space-around;
+}
+.settings-container {
+  font-size: 32px;
+  color: #f5f8fa;
+  cursor: pointer;
 }
