--- a/src/renderer/pages/CreateGame/creategame.css
+++ b/src/renderer/pages/CreateGame/creategame.css
@@ -1,5 +1,6 @@
 input[type='range'] {
   -webkit-appearance: none;
+  appearance: none;
   height: 7px;
   background: grey;
   border-radius: 5px;
@@ -9,6 +10,7 @@ input[type='range'] {
 
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
+  appearance: none;
   height: 20px;
   width: 20px;
   border-radius: 50%;
@@ -20,6 +22,7 @@ input[type='range']::-webkit-slider-thumb {
 
 input[type='range']::-webkit-slider-runnable-track {
   -webkit-appearance: none;
+  appearance: none;
   box-shadow: none;
   border: none;
   background: transparent;
