--- a/src/renderer/pages/Playground/playground.css
+++ b/src/renderer/pages/Playground/playground.css
@@ -56,10 +56,18 @@ div h3 {
 .opponent img {
   width: 600px;
   height: 400px;
-  border: 1px solid black;
 }
 
 .camera-stream {
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.opponent {
   width: 600px;
   display: flex;
   flex-direction: column;
@@ -81,4 +89,9 @@ div h3 {
 
 .emoji {
   font-size: 50px;
+}
+
+video {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
